<resources>
    <string name="app_name">QRReader</string>
    <string name="title_activity_settings">Settings</string>


    <string name="scan_process_label">Scanning…</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="string_url">url</string>
    <string name="string_login">login</string>
    <string name="string_pass">password</string>
    <string name="default_url">https://google.com/search?q=</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="start_qr_reader">Start QR Reader</string>
    <string name="restart">Restart</string>
    <string name="stop_qr_reader">Stop QR Reader</string>
    <string name="title_activity_new_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="status_category">Status</string>
    <string name="payload_values">Payload values</string>
    <string name="payload_category">payload</string>
    <string name="string_list_id">list_id</string>
    <string name="login_if_required">Login (if required)</string>
    <string name="string_ok">OK</string>
    <string name="string_error">Error!</string>


</resources>
