<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:key="@string/status_category"
        android:shouldDisableView="false"
        android:title="@string/pref_header_general" >

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:defaultValue="@string/default_url"
            android:inputType="textUri"
            android:key="@string/string_url"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/string_url" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/payload_category"
        android:shouldDisableView="false"
        android:title="@string/payload_values" >

        <EditTextPreference
            android:inputType="text"
            android:key="@string/string_login"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/string_login" />

        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/string_pass"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/string_pass" />

        <EditTextPreference
            android:defaultValue="list1"
            android:inputType="text"
            android:key="list1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/string_list_id" />

    </PreferenceCategory>

</PreferenceScreen>
