<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:layout_width="250dip"
        android:layout_height="250dip"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:id="@+id/camera_view">
    </SurfaceView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop_qr_reader" />

        <Button
            android:id="@+id/btn_restart_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restart" />
    </LinearLayout>



    <TextView
        android:id="@+id/scanText"
        android:text="@string/scan_process_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dip"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:textSize="@dimen/result_size"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="false" />

</LinearLayout>

